# ip-app-terminal

./: Cargo.toml  README.md
src/: main.rs
src/screen/: basic_operations.rs  ip.rs  menu.rs  mod.rs  read.rs
src/screen/ip_functions/: controllers_ip.rs  mod.rs  show_informations.rs
